Address some review comments

--- a/plutus-core-spec/plutus-core-specification.bib
+++ b/plutus-core-spec/plutus-core-specification.bib
@@ -56,7 +56,29 @@ year={2019}
 @misc{Cardano,
 title = {Cardano},
 howpublished={\url{https://www.cardano.org/en/home/}},
+author={IOHK},
 year = {2015-2019}
+}
+
+@misc{Plutus-repo,
+title = {Plutus {GitHub} repository},
+author={IOHK},
+year={2019},
+howpublished={\url{https://github.com/input-output-hk/plutus}}
+}
+
+@misc{Plutus-exe-repo,
+title = {Plutus Core {GitHub} repository},
+author={IOHK},
+year={2019},
+howpublished={\url{https://github.com/input-output-hk/plutus/tree/master/plutus-exe}}
+}
+
+@misc{Plutus-metatheory-repo,
+title = {Plutus {Agda} formalisation},
+author={IOHK},
+year={2019},
+howpublished={\url{https://github.com/input-output-hk/plutus/tree/master/metatheory}}
 }
 
 @book{Pierce:TAPL,
