--- a/plutus-core-spec/plutus-core-specification.tex
+++ b/plutus-core-spec/plutus-core-specification.tex
@@ -373,7 +373,7 @@ is the type of integers.  See Section~\ref{sec:builtins} for more information.
 
 \paragraph{Type Values.} All types can be reduced to a type value (or
   \textit{normalised type}) which cannot undergo any further
-  reduction: see section~\ref{sec:reduction}.  The type normalisation
+  reduction: see Section~\ref{sec:reduction}.  The type normalisation
   process always terminates: the proof is similar to the proof of the
   fact that reduction of terms in the simply typed lambda calculus
   always terminates \citep[\S12]{Pierce:TAPL}.  The type-level
