--- a/plutus-core-spec/plutus-core-specification.tex
+++ b/plutus-core-spec/plutus-core-specification.tex
@@ -49,7 +49,7 @@
   escapeinside={|}{|}   %% Inside listings you can say things like |\textit{blah blah}|
 }
 
-\usepackage[colorlinks=true,linkcolor=RoyalBlue,citecolor=ForestGreen,urlcolor=Plum]{hyperref}
+\usepackage[colorlinks=true,linkcolor=MidnightBlue,citecolor=ForestGreen,urlcolor=Plum]{hyperref}
 % You're supposed to make this the final package
 
 
