--- a/plutus-core-spec/plutus-core-specification.bib
+++ b/plutus-core-spec/plutus-core-specification.bib
@@ -75,7 +75,7 @@ howpublished={\url{https://github.com/input-output-hk/plutus/tree/master/plutus-
 }
 
 @misc{Plutus-metatheory-repo,
-title = {Plutus {Agda} formalisation},
+title = {Plutus {Core} {Agda} formalisation},
 author={IOHK},
 year={2019},
 howpublished={\url{https://github.com/input-output-hk/plutus/tree/master/metatheory}}
