More fiddling with references

--- a/plutus-core-spec/plutus-core-specification.bib
+++ b/plutus-core-spec/plutus-core-specification.bib
@@ -42,7 +42,9 @@ howpublished={\url{https://wiki.portal.chalmers.se/agda/pmwiki.php}}
 
 @misc{EUTXO,
 title="The {Extended} {UTXO} transaction model",
-howlpublished={\url{https://github.com/input-output-hk/plutus/tree/master/extended-utxo-spec}}
+howpublished={\url{https://github.com/input-output-hk/plutus/tree/master/extended-utxo-spec}},
+author={IOHK},
+year=2019
 }
 
 @book{Plutus-book,
