--- a/README.adoc
+++ b/README.adoc
@@ -79,9 +79,10 @@ print out the image name at the end, e.g. `Loaded image: plutus-playgrounds:yn7h
 
 === How to get the most recent documentation PDFs from CI
 
-==== Specifications
+==== Specifications and design
 
 - https://hydra.iohk.io/job/Cardano/plutus/docs.plutus-core-spec.x86_64-linux/latest/download-by-type/doc-pdf/plutus-core-specification[Plutus Core Specification]
+- https://hydra.iohk.io/job/Cardano/plutus/docs.extended-utxo-spec.x86_64-linux/latest/download-by-type/doc-pdf/extended-utxo-specification[Extended UTXO Model]
 
 ==== Academic papers
 
