--- a/extended-utxo-spec/extended-utxo-specification.tex
+++ b/extended-utxo-spec/extended-utxo-specification.tex
@@ -1,7 +1,7 @@
 %% Extended UTXO Specification
 \newcommand\version{-1}
 
-\title{The Extended UTXO Transaction Model}
+\title{The Extended UTXO Ledger Model}
 
 \pagestyle{plain}
 \date{11th October 2019}
@@ -575,7 +575,7 @@ their scripts pass or fail regardless of what particular permutation
 of transaction inputs they are presented with.
 
 Apart from that, the function $\delta$ is implementation-dependent and
-we will not discuss it further. 
+we will not discuss it further.
 
 \todokwxm{But with the advent of \Data{} we \textit{can}
   specify $\delta$.  Maybe we should?}
