--- a/extended-utxo-spec/extended-utxo-specification.tex
+++ b/extended-utxo-spec/extended-utxo-specification.tex
@@ -1039,7 +1039,7 @@ which provides evidence that the transaction has the authority to do
 so;\footnote{The validator plays a role similar to that of BitCoin's
   \texttt{scriptPubKey} and the redeemer to \texttt{scriptSig}.  } a
 process called \i{validation} is then performed which checks that the
-redeemer satisfies the conditions required by validator.  Before the
+redeemer satisfies the conditions required by the validator.  Before a
 transaction can proceed, all inputs must be successfully validated: if
 one or more inputs fails to validate then the transaction is rejected.
 
